Fix display overflow. Create AC and equal buttons in js

--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ button {
     background-color: blanchedalmond;
     font-size: 40px;
     color: darkslategray;
+    overflow: hidden;
+    text-overflow: clip;
+    min-height: 50px;
+    max-width: 350px;
     text-align: end;
     margin: 10px;
     padding: 10px;
